assets/css/style.css
/* ... */
@media screen and (max-width: 1199px) {

    .full-navbar {
        display: none;
    }

    .collapse-navbar {
        display: block;
        float: right;
    }

    .nav-container-collapse {
        float: right;
        margin-top: 50px;
        text-align: center;
    }

    .navbar-dark .navbar-toggler {
        color: #b288ca;
    }
    
    .navbar-dark {
        float: right;
        margin: 3px 40px;
    }
}

/* --------------------------------------------------------------------------Hero section */

#company-logo {
    font-size: 8rem;
}

.book-btn {
    margin: 10px;
}

.callout-container {
    display: none;
}

.full-callout-container {
    position: relative;
    background-color: rgba(0, 0, 0, 0.7);
    padding-top: 4rem;
    padding-bottom: 4rem;  
    margin: 6rem 0;
    z-index: 2;
}

.hero-bg {
    background: url(../images/hero-image.jpg) no-repeat bottom right fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    height: 75vh;
    text-align: center;
    width: 100%;
    z-index: 1;
}

mark {
    font-size: 85%;
    background-color: burlywood;
}

@media screen and (max-width: 1160px) {

    .hero-bg {
        display: none;
    }

    .callout-container {
        display: block;
        text-align: center;
        margin: 20px 0;
    }

    #company-logo {
        font-size: 7rem;
    }

}

@media screen and (max-width: 576px) {

    #company-logo {
        font-size: 4.7rem;
    }

}

@media screen and (max-width: 280px) {

    #company-logo {
        font-size: 4rem;
    }

}

/* --------------------------------------------------------------------------Modal section */

.modal-body {
    color: blanchedalmond;
    background-color: #131111;
}

.modal-header {
    background-color: #131111;
    border-color: blanchedalmond;
}

.modal-title {
    color: blanchedalmond;
    text-align: center;
}

/* --------------------------------------------------------------------------Review section */

.cust-reviews {
    margin: 35px 20px;
    text-align: center;
}

.carousel-inner p {
    width: 1rem;
}

.fa-hand-scissors {
    color: #b288ca;
}

#carouselExampleIndicators {
    min-height: 15rem;
    max-height: 15rem;
}

@media screen and (max-width: 888px) {

    #carouselExampleIndicators {
        min-height: 17rem;
        max-height: 17rem;
    }

}

@media screen and (max-width: 576px) {

    #carouselExampleIndicators {
        min-height: 18rem;
        max-height: 18rem;
    }

    .carousel-item {
        font-size: 0.95rem;
    }

}

@media screen and (max-width: 460px) {

    #carouselExampleIndicators {
        min-height: 19rem;
        max-height: 19rem;
    }

    .carousel-item {
        font-size: 0.75rem;
    }

}

@media screen and (max-width: 290px) {

    #carouselExampleIndicators {
        min-height: 20rem;
        max-height: 20rem;
    }

    .carousel-item {
        font-size: 0.7rem;
    }

}

/* --------------------------------------------------------------------------Footer section */

footer {
    position: relative;
    margin-top: 100px;
    clear: both;
}

footer h3 {
    margin-bottom: 20px;
}

.contact-footer {
    text-align: center;
}

.contact-footer a {
    text-decoration: none;
    color: #b288ca;
}

.opening {
    text-align: center;
}

.socials {
    text-align: center;
}

.socials i {
    color: #b288ca;
    font-size: 30px;
    padding: 0 15px 129px 15px;
}

.disclaimer {
    text-align: center;
}

.disclaimer i {
    color: #b288ca;
}

.med-footer {
    display: none;
}

.small-footer {
    display: none;
}

@media screen and (max-width: 992px) {

    .full-footer {
        display: none;
    }

    .small-footer {
        display: none;
    }

    .med-footer {
        display: block;
    }

    .socials i {
        padding: 10px;
    }

    .socials, .disclaimer {
        margin-top: 50px;
    }

}

@media screen and (max-width: 768px) {

    .full-footer {
        display: none;
    }

    .med-footer {
        display: none;
    }

    .small-footer {
        display: block;
    }

    .socials i {
        padding: 10px;
    }

    .opening, .socials, .disclaimer {
        margin-top: 50px;
    }

}

/* --------------------------------------------------------------------------About section */

.entire-about-full {
    width: 80%;
    display: block;
}

.about-heading-full {
    text-align: left;
    margin-bottom: 50px;
}

.about-content-full {
    margin-top: 110px;
    margin-right: 10%;
    width: 60%;
}

.about-images-full {
   width: 22em;
   height: 32em;
}

.entire-about-med-big, 
.entire-about-big, 
.entire-about-med, 
.entire-about-small {
    display: none;
}

@media screen and (max-width: 1500px) {

    .entire-about-big {
        width: 75%;
        display: block;
    }

    .about-heading-big {
        text-align: left;
        margin-bottom: 50px;
    }

    .about-content-big {
        margin-top: 70px;
        margin-right: 7%;
        width: 50%;
    }

    .about-images-big {
        width: 20em;
        height: 35em;
        margin-top: 5%;
    }

    .entire-about-full, 
    .entire-about-med-big, 
    .entire-about-med, 
    .entire-about-small {
        display: none;
    }

}

@media screen and (max-width: 1150px) {

    .entire-about-med-big {
        width: 85%;
        display: block;
    }

    .about-heading-med-big {
        text-align: center;
        margin-bottom: 70px;
    }

    /* Copied code from Geeksforgeeks.org on how to wrap text around images using CSS */
    .about-content-med-big {
        width: 100%;
        text-align: justify;
        margin-top: 3%;
    }

    .about-images-med-big {
        float: right;
        margin: 2%;
        width: 32%;
    }
    /* /Copied code from Geeksforgeeks.org on how to wrap text around images using CSS */

    .entire-about-full, 
    .entire-about-big, 
    .entire-about-med, 
    .entire-about-small {
        display: none;
    }

}
/* ... */

